[CW7]
* SyncProxyAndroid SDK: Interim fix: revert the change of protocol v2 JSON messages (the "parameters" key) until the AppLinkCore has changed the parser.
- SyncProxyAndroid SDK: remove MP3 and WAV values from the AudioType enum (affects AudioPassThru).
* Don't add/remove submenu from SubMenu list until a successful AddSubMenuResponse/DeleteSubMenuResponse has come.
* Ford Commit:
  1) Update module test functionality and example xml script. Place xml script on root of sdcard to deploy.
  2) AudioCaptureQuality has been renamed to BitsPerSample (effects PerformAudioPassThru)
  3) AudioType enum - WAV and MP3 have been removed from (effects PerformAudioPassThru)
  4) Incorrect AppLink Protocol 2 JSON message. Current code includes a "parameters" key that shouldn't be there. Ex. current: {"parameters":{…}} should be {…} This effects all AppLink Protocol 2 messages and is particularly harmful to OnAudioPassThru notification because it will ONLY have binary data and no JSON anymore.
* Policies test: show errors as toasts, instead of adding to the console.

[CW6]
* ButtonSubscriptions dialog: exclude ButtonName.CUSTOM_NAME value.
* AlertManeuver message: always send soft buttons even if an empty array.

[CW5]
* Reduce the app icon size for faster transfer (on Android 2.*).
+ Upload turn left, right, and forward icons after app registration for UpdateTurnList.
* UpdateTurnList dialog: fix the number of soft buttons sent by default, allow to specify image for each turn.
* Don't set app icon for protocol version v1.
* ShowConstantTBT and UpdateTurnList messages: always send soft buttons even if an empty array.
* Properly display subscribed buttons after first HMI status notification.
* ResetGlobalProperties dialog for v1 protocol: hide and don't send VR help title and VR help item properties.
* AlertManeuver message: an array of TTS Chunks can be sent now.
+ Play the realtime audio coming with OnAudioPassThru notifications.